[tool.poetry]
name = "FileConvertBot"
version = "0.1.0"
description = ""
authors = ["Iulian Onofrei <iulian.onofrei@yahoo.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.8"
ffmpeg-python = "*"
pdf2image = "*"
peewee = "*"
peewee-migrate = "1.1.6"
python-telegram-bot = "12.8"
requests = "2.24.0"
youtube-dl = "*"

[tool.poetry.dev-dependencies]
fabric = "*"
invocations = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
